welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:14: error: not found: value color
  FleurHaut(color.blue)
            ^